make satellites "work"