@@ -1,25 +1,23 @@
 package argent_matter.gcyr.common.machine.electric;
 
 import argent_matter.gcyr.api.space.satellite.capability.SatelliteWorldSavedData;
+import argent_matter.gcyr.client.gui.widget.SatelliteScanWidget;
 import argent_matter.gcyr.common.satellite.OreFinderSatellite;
 import argent_matter.gcyr.util.Vec2i;
-import com.gregtechceu.gtceu.api.data.chemical.ChemicalHelper;
+import com.gregtechceu.gtceu.api.gui.GuiTextures;
 import com.gregtechceu.gtceu.api.machine.IMachineBlockEntity;
 import com.gregtechceu.gtceu.api.machine.TieredEnergyMachine;
-import com.gregtechceu.gtceu.common.data.GTMaterials;
-import net.minecraft.core.BlockPos;
-import net.minecraft.core.registries.BuiltInRegistries;
-import net.minecraft.resources.ResourceLocation;
+import com.gregtechceu.gtceu.api.machine.feature.IUIMachine;
+import com.lowdragmc.lowdraglib.gui.modular.ModularUI;
+import com.lowdragmc.lowdraglib.gui.texture.GuiTextureGroup;
+import com.lowdragmc.lowdraglib.gui.widget.SwitchWidget;
 import net.minecraft.server.level.ServerLevel;
+import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.level.block.state.BlockState;
 
-import java.util.HashMap;
-import java.util.Map;
-import java.util.stream.Collectors;
-
-public class OreFinderScannerMachine extends TieredEnergyMachine {
+public class OreFinderScannerMachine extends TieredEnergyMachine implements IUIMachine {
     public static final int MACHINE_RANGE_MULTIPLIER = 16;
-    private final Map<BlockState, String> BLOCK_CACHE = new HashMap<>();
+    public static final long ENERGY_USAGE = 128;
 
     private final int range;
 
@@ -28,33 +26,31 @@ public class OreFinderScannerMachine extends TieredEnergyMachine {
         this.range = this.tier * MACHINE_RANGE_MULTIPLIER;
     }
 
-    public void scanOres(BlockState[][][] storage) {
+    public void scanOres(BlockState[][][] storage, int chunkX, int chunkZ) {
+        // don't scan if we don't have enough power.
+        if (this.energyContainer.removeEnergy(ENERGY_USAGE * tier) < ENERGY_USAGE * tier) {
+            return;
+        }
         if (this.getLevel() instanceof ServerLevel serverLevel) {
-            BlockPos myPos = this.getPos();
-            storage = new BlockState[OreFinderSatellite.CELL_SIZE][OreFinderSatellite.CELL_SIZE][0];
-            var satellites = SatelliteWorldSavedData.getOrCreate(serverLevel).getSatellitesNearPos(new Vec2i(myPos.getX(), myPos.getZ()), range).stream().filter(OreFinderSatellite.class::isInstance).map(OreFinderSatellite.class::cast).collect(Collectors.toList());
+            Vec2i centerPos = new Vec2i(chunkX * 16, chunkZ * 16);
+            var satellites = SatelliteWorldSavedData.getOrCreate(serverLevel).getSatellitesNearPos(centerPos, range).stream().filter(OreFinderSatellite.class::isInstance).map(OreFinderSatellite.class::cast).toList();
             for (OreFinderSatellite satellite : satellites) {
                 satellite.scan(storage, serverLevel);
             }
         }
     }
 
-    public int getItemColor(BlockState state) {
-        var itemName = BLOCK_CACHE.computeIfAbsent(state, blockState -> {
-            var name = BuiltInRegistries.BLOCK.getKey(blockState.getBlock()).toString();
-            var entry = ChemicalHelper.getUnificationEntry(blockState.getBlock());
-            if (entry != null && entry.material != null) {
-                name = "material_" + entry.material;
-            }
-            return name;
-        });
-        if (itemName.startsWith("material_")) {
-            var mat = GTMaterials.get(itemName.substring(9));
-            if (mat != null) {
-                return mat.getMaterialRGB();
-            }
-        }
-        return BuiltInRegistries.BLOCK.get(new ResourceLocation(itemName)).defaultMapColor().col;
+    @Override
+    public ModularUI createUI(Player entityPlayer) {
+        var map = new SatelliteScanWidget(4, 4, 332 - 8, 200 - 8, this.range, 1, this);
+        return new ModularUI(332, 200, this, entityPlayer)
+                .background(GuiTextures.BACKGROUND)
+                .widget(map)
+                .widget(new SwitchWidget(-20, 4, 18, 18, (cd, pressed) -> map.setDarkMode(pressed))
+                        .setSupplier(map::isDarkMode)
+                        .setTexture(
+                                new GuiTextureGroup(GuiTextures.BUTTON, GuiTextures.PROGRESS_BAR_SOLAR_STEAM.get(true).copy().getSubTexture(0, 0.5, 1, 0.5).scale(0.8f)),
+                                new GuiTextureGroup(GuiTextures.BUTTON, GuiTextures.PROGRESS_BAR_SOLAR_STEAM.get(true).copy().getSubTexture(0, 0, 1, 0.5).scale(0.8f))));
     }
 
 }
